# kma_rustlang_course_2024_Artem_Trokhymchuk

4_parser_prototype/pest_01/: Cargo.toml
4_parser_prototype/pest_01/src/: main.rs
6_serde/serde_practice/: Cargo.toml
6_serde/serde_practice/src/: main.rs  request.json
rustlings/: temp_277426_ThreadId1  temp_284638_ThreadId1
rustlings/exercises/: quiz1.rs  quiz3.rs  quiz4.rs
rustlings/exercises/advanced_errors/: advanced_errs1.rs  advanced_errs2.rs
rustlings/exercises/collections/: hashmap1.rs  hashmap2.rs  vec2.rs
rustlings/exercises/conversions/: from_into.rs  from_str.rs  try_from_into.rs
rustlings/exercises/enums/: enums3.rs
rustlings/exercises/error_handling/: errors2.rs  errors4.rs  errors6.rs
rustlings/exercises/functions/: functions1.rs  functions3.rs
rustlings/exercises/generics/: generics3.rs
rustlings/exercises/if/: if2.rs
rustlings/exercises/modules/: modules3.rs
rustlings/exercises/move_semantics/: move_semantics5.rs  move_semantics6.rs
rustlings/exercises/option/: option2.rs
rustlings/exercises/primitive_types/: primitive_types2.rs  primitive_types3.rs
rustlings/exercises/standard_library_types/: box1.rs  iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
rustlings/exercises/structs/: structs1.rs  structs3.rs
rustlings/exercises/threads/: threads1.rs
rustlings/exercises/traits/: traits2.rs
rustlings/exercises/variables/: variables2.rs  variables4.rs  variables5.rs
