[package]
name = "serde_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
humantime-serde = "1.1.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
toml = "0.8.19"
url = "2.5.3"
uuid = "1.11.0"
